apps/pk8s/tw/freshrss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: tw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: freshrss
    spec:
      containers:
        - env:
            - name: PGID
              value: '1001'
            - name: PUID
              value: '1001'
            - name: TZ
              value: Europe/Madrid
          image: lscr.io/linuxserver/freshrss:1.30.1 # {"$imagepolicy": "tw:freshrss"}
          name: freshrss
          resources: {}
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /config
              name: freshrss-config
            - mountPath: /config/nginx/site-confs/default.conf
              name: freshrss-cfg
              subPath: default.conf
            - mountPath: /config/www/freshrss/data/config.custom.php
              name: freshrss-cfg
              subPath: config.custom.php
      restartPolicy: Always
      volumes:
        - name: freshrss-cfg
          configMap:
            name: freshrss-cfg
        - name: freshrss-config
          persistentVolumeClaim:
            claimName: freshrss-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: freshrss
  name: freshrss
  namespace: tw
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    io.kompose.service: freshrss
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: tw
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - panel.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: panel.torreviejawireless.org
      http:
        paths:
          - path: /freshrss
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  name: http
