apps/pk8s/tw/sipwise-mirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sipwise-mirror
  namespace: tw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sipwise-mirror
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: sipwise-mirror
    spec:
      containers:
        - env:
            - name: PGID
              value: '1001'
            - name: PUID
              value: '1001'
            - name: TZ
              value: Europe/Madrid
            - name: PUBLIC_KEY
              value: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDP7oLGyDPF39xT7g0hqETizWwQ801U6f4/zdJTy/zU7G/IB1RQnhtfQzvpAuYM+/b7o7vofTdmShZs6uj+XbDLsHmSwned8Eid1vJGiORFjpuYxtvjeOtaQrQ41OSkTuNuChw8rxTSFO+0qJ0gNowFT6derwh8/VY3SZClK8a+WV5QQq6Txsu0cm1jBtTz8NCWxIoMhgUi4qNenLebpb5VS8FFI8r7CFax5ey5h6E/Y6YgQ7s6J3EM9139EFfomws19tuKgCJs+BgU80oW2Zrj08l2NdGSJRsX0epMhjqOnsuOF2yTceLQIqEGKgXRoLGb6Bmp991ZsVdnZxa/57CJxa3aL3geamZGJ4hZgPXa+14RV2BFuZLwM/yCwjyCfjs0dV5EsQal27Pbto7hEQIyglhI7X5toxdfnIrI0O10XB80A/845yDKsnR [...]
            - name: USER_NAME
              value: jenkins
            - name: SUDO_ACCESS
              value: 'false'
          image: lscr.io/linuxserver/openssh-server:10.0_p1-r7-ls199 # {"$imagepolicy": "tw:openssh-server"}
          name: sipwise-mirror
          resources: {}
          ports:
            - containerPort: 2222
          volumeMounts:
            - mountPath: /nas.office.sipwise.com
              name: nfs-sipwise-mirror
            - mountPath: /custom-cont-init.d
              name: sipwise-mirror-custom
        - name: sipwise-mirror-nginx
          image: lscr.io/linuxserver/nginx:1.28.0 # {"$imagepolicy": "tw:nginx"}
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www
              name: nfs-sipwise-mirror
              readOnly: true
            - mountPath: /config/nginx
              name: sipwise-mirror-nginx-confs
            - mountPath: /tmp/default.conf
              name: sipwise-mirror-nginx
              subPath: default.conf
            - mountPath: /custom-cont-init.d/config
              name: sipwise-mirror-nginx
              subPath: config
      restartPolicy: Always
      volumes:
        - name: nfs-sipwise-mirror
          persistentVolumeClaim:
            claimName: nfs-sipwise-mirror
        - name: sipwise-mirror-custom
          configMap:
            name: sipwise-mirror-custom
        - name: sipwise-mirror-nginx-confs
          emptyDir:
            sizeLimit: 20Mi
        - name: sipwise-mirror-nginx
          configMap:
            name: sipwise-mirror-nginx
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/address-pool: external-pool
    metallb.io/loadBalancerIPs: 192.168.5.242
  labels:
    io.kompose.service: sipwise-mirror
  name: sipwise-mirror
  namespace: tw
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
  type: LoadBalancer
  selector:
    io.kompose.service: sipwise-mirror
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sipwise-mirror
  name: sipwise-mirror-nginx
  namespace: tw
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    io.kompose.service: sipwise-mirror
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sipwise-mirror
  namespace: tw
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-internal-ipallowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mirror.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: mirror.torreviejawireless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sipwise-mirror-nginx
                port:
                  name: http
